--- a/backoffice-ui/package.json
+++ b/backoffice-ui/package.json
@@ -5,11 +5,16 @@
   "main": "src/main.js",
   "scripts": {
     "build": "mkdir -p ../http/assets/backoffice/js && cp ./node_modules/mithril/mithril.min.js ../http/assets/backoffice/js/mithril.min.js && rollup -c",
-    "start": "npm run build -- -w"
+    "start": "npm run build -- -w",
+    "lint": "eslint src/**",
+    "lint:fix": "npm run lint -- --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.1",
     "rollup": "^1.10.0"
   },
   "dependencies": {
