--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.1'
 
 services:
 
@@ -6,15 +6,29 @@ services:
     image: gonference
     build:
       context: .
+    environment:
+      - DATABASE_URL=postgresql://postgres:12345@db/gonference?sslmode=disable
+      - PORT=80
+    ports:
+      - 127.0.0.1:3000:80
+    depends_on:
+      db:
+        condition: service_healthy
 
   db:
     image: postgres:11.1-alpine
     restart: always
     environment:
+      - POSTGRES_DB=gonference
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=12345
     ports:
       - 127.0.0.1:5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 5s
+      retries: 5
 
   adminer:
     image: adminer
