--- a/docker/gonference-devenv/docker-compose.yml
+++ b/docker/gonference-devenv/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: always
     environment:
       - POSTGRES_USER=postgres
+      - POSTGRES_DB=gonference
       - POSTGRES_PASSWORD=12345
     ports:
       - 127.0.0.1:5432:5432
