--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@
 # Custom
 /out/gonference
 /src/web/assets/backoffice/js/
+/src/web/assets/public/
 /src/backoffice-ui/node_modules/
+/src/front-style/node_modules/
 /.idea
