--- a/src/backoffice-ui/package.json
+++ b/src/backoffice-ui/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
-        "start": "parcel watch src/index.html",
-        "build": "rm -rf dist/ && parcel build src/index.html"
+        "start": "parcel watch --public-url /admin/ src/index.html",
+        "build": "rm -rf dist/ && parcel build --public-url /admin/ src/index.html"
     },
     "devDependencies": {
         "bulma": "^0.8.0",
