--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -20,7 +20,7 @@ RUN apk add --update --no-cache git
 WORKDIR /src/app
 ADD app/go.mod .
 ADD app/go.sum .
-RUN go mod download
+RUN go mod download && go get -u github.com/gobuffalo/packr/v2/packr2
 ADD ./app/main.go .
 ADD ./app/pkg ./pkg
 ADD ./app/resources ./resources
@@ -29,7 +29,7 @@ COPY --from=front-style-build /src/dist .
 WORKDIR /src/backoffice-ui/dist
 COPY --from=backoffice-ui-build /src/dist .
 WORKDIR /src/app/pkg/assets
-RUN go get -u github.com/gobuffalo/packr/v2/packr2 && packr2
+RUN packr2
 WORKDIR /src/app
 RUN go build -ldflags "-s -w" -o dist/gonference .
 
@@ -37,5 +37,6 @@ FROM alpine:3.11
 ENV GIN_MODE release
 WORKDIR /app
 VOLUME /app/uploads
+VOLUME /app/logs
 COPY --from=app-build /src/app/dist/gonference .
 CMD ./gonference
