Custom brand name and image

--- a/Tskfile.yml
+++ b/Tskfile.yml
@@ -3,6 +3,8 @@ env:
   GOPROXY: direct
   DATABASE_URL: "postgresql://postgres:12345@localhost/gonference?sslmode=disable"
   PORT: 3000
+  CUSTOM_LOGO_PATH: /logo.png
+  CUSTOM_BRAND_NAME: Custom Gonference
   DEVENV_PATH: docker/gonference-devenv
   BACKOFFICE_UI_PATH: src/backoffice-ui
   FRONT_STYLE_PATH: src/front-style
