--- a/docker/prod/docker-compose.override.yml
+++ b/docker/prod/docker-compose.override.yml
@@ -5,6 +5,7 @@ services:
   app:
     environment:
       DATABASE_URL: 'postgresql://postgres:12345@db/gonference?sslmode=disable'
+      COOKIE_SECRET: 'secret'
     ports:
       - 0.0.0.0:3001:80
     volumes:
