--- a/Tskfile.yml
+++ b/Tskfile.yml
@@ -5,6 +5,7 @@ env:
   COOKIE_SECRET: "secret"
   PORT: 3000
   BASE_URL: 'http://localhost:3000'
+  TEMPLATE_CACHE: 'true'
   CUSTOM_LOGO_PATH: /logo.png
   CUSTOM_BRAND_NAME: Custom Gonference
   DEVENV_PATH: docker/gonference-devenv
