--- a/src/app/workdir/config.toml
+++ b/src/app/workdir/config.toml
@@ -2,7 +2,7 @@
 Port = 3000
 BaseURL = 'http://localhost:3000'
 CookieSecret = 'secret'
-TemplateCache = true
+TemplateCache = false
 
 [Database]
 URL = "postgresql://postgres:12345@localhost/gonference?sslmode=disable"
