Access log is parametrizable

--- a/src/app/workdir/config.toml
+++ b/src/app/workdir/config.toml
@@ -10,3 +10,6 @@ URL = "postgresql://postgres:12345@localhost/gonference?sslmode=disable"
 [Custom]
 LogoPath = ''
 BrandName = ''
+
+[Logging]
+AccessLog = false
