--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       - POSTGRES_PASSWORD=12345
     ports:
       - 127.0.0.1:5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 3s
+      timeout: 1s
+      retries: 30
 
   gonference:
     image: gonference
@@ -21,3 +26,6 @@ services:
       - ./config.toml:/app/config.toml:ro
     ports:
       - 127.0.0.1:3000:80
+    depends_on:
+      db:
+        condition: service_healthy
